--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^4.0.0",
     "chart.js": "^2.7.1",
+    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-angular-templatecache": "^2.2.0",
-    "gulp-autoprefixer": "^4.1.0",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^3.1.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   },
   "devDependencies": {},
   "scripts": {
